--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'MuseoModerno', cursive;
+  font-family: 'MuseoModerno',
+    cursive;
+  outline: none;
 }
 
 .App {
@@ -10,6 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  outline: none;
 }
 
 .app-wrapper {
@@ -21,6 +24,7 @@
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: 0 10px 50px rgba(123, 123, 123, 0.802);
+  outline: none;
 }
 
 .main {
@@ -29,6 +33,7 @@
   align-items: space-between;
   margin-bottom: 50px;
   width: 100%;
+  outline: none;
 }
 
 .background {
@@ -39,6 +44,7 @@
   justify-content: center;
   align-items: center;
   z-index: -1;
+  outline: none;
 }
 
 .SongImg {
@@ -52,10 +58,12 @@
   margin-top: 30px;
   border-radius: 100%;
   box-shadow: 0 15px 15px rgba(8, 8, 8, 0.802);
+  outline: none;
 }
 
 .container {
   text-align: center;
+  outline: none;
 }
 
 .clicks {
@@ -66,6 +74,7 @@
   background-color: transparent;
   border: 0;
   margin-left: 5px;
+  outline: none;
   margin-right: 5px;
 }
 
@@ -73,8 +82,65 @@
   border: 2px solid blueviolet;
   color: blueviolet;
   border-radius: 100%;
+  outline: none;
   box-shadow: 0 10px 15px rgba(8, 8, 8, 0.557);
 }
+
 h2 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Playfair Display',
+  serif;
+  outline: none;
+}
+
+.SongProc {
+  appearance: none;
+  height: 5px;
+  width: 230px;
+  z-index: 2;
+  background-color: rgb(0, 0, 0);
+  outline: none;
+}
+
+.SongProc::-webkit-slider-thumb {
+  appearance: none;
+  width: 5px;
+  height: 5px;
+  border: 0;
+}
+
+.SongProc::-moz-range-progress {
+  height: 5px;
+  background-color: rgb(255, 255, 255);
+}
+
+input[type=range]:focus {
+  outline: none;
+  /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #000000;
+  height: 10px;
+  width: 10px;
+  border-radius: 555px;
+  background: #ffffff;
+  cursor: pointer;
+  /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+
+}
+
+input[type=range]::range-progress {
+  z-index: 3;
+  background-color: aliceblue;
 }
